使用 Colaboratory 创建

--- a/Test_regression.ipynb
+++ b/Test_regression.ipynb
@@ -6,6 +6,7 @@
       "name": "Test regression.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "toc_visible": true,
       "include_colab_link": true
     },
@@ -43,7 +44,11 @@
       "metadata": {
         "id": "I6Q_bTr0z7RO",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "20da54c8-c36a-4940-acaa-8cf376cef89a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
         "import tensorflow\n",
@@ -67,6 +72,27 @@
         "from sklearn.cluster import KMeans\n",
         "from sklearn import tree\n",
         "from tqdm import tqdm"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Using TensorFlow backend.\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Oh4ktePFGjZd",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
@@ -99,18 +125,18 @@
       "metadata": {
         "id": "ipTY_jM0z7RU",
         "colab_type": "code",
+        "outputId": "54e56e20-796f-4ad9-88e9-766ecdbc7833",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "100083c3-e2e4-4ed4-a461-57f2aa54d39d"
+          "height": 195
+        }
       },
       "source": [
         "data1 = data.copy()\n",
         "data1.Temp,data1.CaO=data1.Temp/1000,data1.CaO/10\n",
         "data1.head()"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -139,7 +165,7 @@
               "      <th>CaO</th>\n",
               "      <th>MgO</th>\n",
               "      <th>SiO2</th>\n",
-              "      <th>Fe_total</th>\n",
+              "      <th>Fe-total</th>\n",
               "      <th>MnO</th>\n",
               "      <th>Al2O3</th>\n",
               "      <th>TiO2</th>\n",
@@ -217,7 +243,7 @@
               "</div>"
             ],
             "text/plain": [
-              "         lp   Temp   CaO    MgO  SiO2  Fe_total   MnO  Al2O3  TiO2   V2O5\n",
+              "         lp   Temp   CaO    MgO  SiO2  Fe-total   MnO  Al2O3  TiO2   V2O5\n",
               "0  4.736198  1.649  4.00   8.63   7.8      27.5  3.38   0.91  0.45  1.473\n",
               "1  4.436094  1.654  3.96   9.99   9.2      23.0  4.14   2.60  0.68  1.945\n",
               "2  4.499810  1.664  4.48   8.80  11.0      20.2  3.45   1.58  0.76  2.070\n",
@@ -228,9 +254,39 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3MqyGxMD7Ash",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def stdarize_data(data):\n",
+        "  mean = data.describe().loc['mean'].values\n",
+        "  std = data.describe().loc['std'].values\n",
+        "  stddata = (data - mean)/std\n",
+        "  return stddata"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "s50iT6Af-IXB",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "stddata = stdarize_data(data)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -250,13 +306,59 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tNTt4yCaCsW5",
+        "id": "fz687WR0CQpe",
+        "colab_type": "code",
+        "outputId": "01dc35a8-c3b6-4c74-bf4d-48034aaee2ff",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 232
+        }
+      },
+      "source": [
+        "X_tree = S4.loc[:,'MgO'].values.reshape(-1,1)\n",
+        "y_tree = S4.loc[:,'lp'].values.reshape(-1,1)\n",
+        "clf = tree.DecisionTreeRegressor(max_depth = 1, criterion = 'mse')\n",
+        "clf = clf.fit(X_tree,y_tree)\n",
+        "tree_result = tree.export_text(clf)\n",
+        "print(tree_result)"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-9-40dde6aad81b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mX_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mS4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'MgO'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0my_tree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mS4\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'lp'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDecisionTreeRegressor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmax_depth\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcriterion\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'mse'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_tree\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my_tree\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtree_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtree\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexport_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'S4' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YaaIwlTnVSlc",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "data1['Basicity'] = (data['CaO'] + 0.3*data['MgO'])/data['SiO2']\n",
-        "data['Basicity'] = (data['CaO'] + 0.3*data['MgO'])/data['SiO2']"
+        "T1 = stddata.loc[stddata['Temp']<=0.24].copy()\n",
+        "T2 = stddata.loc[stddata['Temp']>0.24].copy()\n",
+        "S1 = T1.loc[T1['SiO2'] <= 0.47].reset_index().drop(['index'],axis = 1)\n",
+        "S2 = T1.loc[T1['SiO2'] > 0.47].reset_index().drop(['index'],axis = 1)\n",
+        "S3 = T2.loc[T2['SiO2'] <= 0.33].reset_index().drop(['index'],axis = 1)\n",
+        "S4 = T2.loc[T2['SiO2'] > 0.33].reset_index().drop(['index'],axis = 1)\n",
+        "M1 = S1.loc[S1['MgO'] <= 0.72].reset_index().drop(['index'],axis = 1)\n",
+        "M2 = S1.loc[S1['MgO'] > 0.72].reset_index().drop(['index'],axis = 1)\n",
+        "M3 = S2.loc[S2['MgO'] <= 0.81].reset_index().drop(['index'],axis = 1)\n",
+        "M4 = S2.loc[S2['MgO'] > 0.81].reset_index().drop(['index'],axis = 1)\n",
+        "M5 = S3.loc[S3['MgO'] <= 0.36].reset_index().drop(['index'],axis = 1)\n",
+        "M6 = S3.loc[S3['MgO'] > 0.36].reset_index().drop(['index'],axis = 1)\n",
+        "M7 = S4.loc[S4['MgO'] <= -0.17].reset_index().drop(['index'],axis = 1)\n",
+        "M8 = S4.loc[S4['MgO'] > -0.17].reset_index().drop(['index'],axis = 1)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -264,16 +366,43 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fz687WR0CQpe",
+        "id": "si4k4-9nMsKc",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "X_tree = data.loc[:,'Temp':'Basicity':9]\n",
-        "y_tree = data.loc[:,'lp']"
+        "test_sample = data.sample(n = 2000, random_state = 9)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7EXFr_ekLeD5",
+        "colab_type": "code",
+        "outputId": "85982251-8923-4f69-b06f-0fde6f49f699",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 131
+        }
+      },
+      "source": [
+        "def neuroneTuning(nums):\n",
+        "  model = baseline_model('relu','RMSprop',nums)\n",
+        "  model.fit()"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-40-8a3e2766444c>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def neuroneTuning(nums):\u001b[0m\n\u001b[0m                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -290,56 +419,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_qP1gHW6EKr6",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "clf = tree.DecisionTreeRegressor(max_depth = 2, criterion = 'mse')\n",
-        "clf = clf.fit(X_tree,y_tree)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "DqYq9X5XQSA6",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 204
-        },
-        "outputId": "78772243-b5bd-4ece-8993-41ac4c7572af"
-      },
-      "source": [
-        "tree_result = tree.export_text(clf,feature_names = ['Temp','Basicity'])\n",
-        "print(tree_result)"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "|--- Temp <= 1653.50\n",
-            "|   |--- Basicity <= 3.19\n",
-            "|   |   |--- value: [4.26]\n",
-            "|   |--- Basicity >  3.19\n",
-            "|   |   |--- value: [4.44]\n",
-            "|--- Temp >  1653.50\n",
-            "|   |--- Temp <= 1663.50\n",
-            "|   |   |--- value: [4.23]\n",
-            "|   |--- Temp >  1663.50\n",
-            "|   |   |--- value: [4.12]\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -363,9 +442,9 @@
         "colab": {}
       },
       "source": [
-        "def baseline_model(act,opt):\n",
+        "def baseline_model(act,opt,nums):\n",
         "    model = Sequential()\n",
-        "    model.add(Dense(20, input_dim = 9, activation = act))\n",
+        "    model.add(Dense(nums, input_dim = 9, activation = act))\n",
         "    model.add(Dense(1, activation = 'linear'))\n",
         "    model.compile(loss='mse', optimizer = opt, metrics=['mse']) \n",
         "    return model"
@@ -400,25 +479,6 @@
       },
       "source": [
         "modelList = generate_model()"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YaaIwlTnVSlc",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "T1 = data1.loc[data1['Temp']<=1.653].copy()\n",
-        "T2 = data1.loc[data1['Temp']>1.653].copy()\n",
-        "B1 = T1.loc[T1['Basicity'] <= 3.19].reset_index().drop(['index'],axis = 1)\n",
-        "B2 = T1.loc[T1['Basicity'] > 3.19].reset_index().drop(['index'],axis = 1)\n",
-        "B3 = T2.loc[T2['Basicity'] <= 3.46].reset_index().drop(['index'],axis = 1)\n",
-        "B4 = T2.loc[T2['Basicity'] > 3.46].reset_index().drop(['index'],axis = 1)\n",
-        "  "
       ],
       "execution_count": 0,
       "outputs": []
